Fix link issues with div overlap

--- a/757-rug-presentations.css
+++ b/757-rug-presentations.css
@@ -141,18 +141,23 @@ div.logo {
   align: left;
   }
 
-.reference-footnote {
+.attribution {
   color: #555555 !important;
   text-align: left !important;
   position: fixed !important;
+  width: 100%;
   left: 0px !important;
   bottom: 0px !important;
   padding: 10px !important;
-  z-index: 100 !important;
 	font-size: .6em !important;
 }
 
-.footer2 {
+.attribution-link {
+  position: absolute; 
+  z-index:1000 !important;
+}
+
+.reference {
   box-sizing: border-box !important;
   width: 100% !important;
   color: #555555 !important;
@@ -163,17 +168,15 @@ div.logo {
   padding: 10px !important;
   z-index: 100 !important;
 	font-size: 75% !important;
-}
-
-blockquote {
-  display: block !important;
+	display: block !important;
   margin-top: 10px !important;
   margin-bottom: 5px !important;
-  margin-left: 35px !important;
   margin-right: 35px !important;
   background-color: #cadef6 !important;
-  border-radius: 10px !important;
-  padding: 8px !important;
+  padding-top: 8px !important;
+  padding-bottom: 10px !important;
+  padding-left: 15px !important;
+  padding-right: 8px !important;
   border-color: #1f63b6 !important;
   border-width: 1px !important;
   border-style: solid !important;
